...
              <FancyText
                size='large'
                type='bold'
                color={Pallete.fonts.dark}
                style={styles.screenTitle}
              >
                Entre na sua conta
              </FancyText>

              <View style={styles.fieldsWrap}>
                <FancyTextInput
                  label='E-mail'
                  value={email}
...
